[gd_scene load_steps=15 format=2]

[ext_resource path="res://script/HUD.gd" type="Script" id=1]
[ext_resource path="res://VarelaRound-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/coin2.png" type="Texture" id=3]
[ext_resource path="res://asset/coin3.png" type="Texture" id=4]
[ext_resource path="res://asset/coin4.png" type="Texture" id=5]
[ext_resource path="res://sound_effect/bgmusic.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 29
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 25
outline_size = 1
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="NewGame" type="Button" parent="."]
modulate = Color( 0.2, 0.588235, 1, 1 )
margin_left = 127.999
margin_top = 290.0
margin_right = 312.999
margin_bottom = 348.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.87451, 0.0117647, 0.0117647, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NEW GAME"

[node name="Continue" type="Button" parent="."]
modulate = Color( 0.2, 0.588235, 1, 1 )
margin_left = 127.999
margin_top = 360.0
margin_right = 312.999
margin_bottom = 418.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.87451, 0.0117647, 0.0117647, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONTINUE"

[node name="Title" type="Label" parent="."]
margin_left = 54.491
margin_top = 152.564
margin_right = 378.491
margin_bottom = 213.564
custom_fonts/font = SubResource( 2 )
text = "ROLLING DIE"
align = 1
uppercase = true

[node name="Gameover" type="Label" parent="."]
modulate = Color( 0, 0.305882, 0.509804, 1 )
margin_left = 70.0
margin_top = 210.0
margin_right = 369.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 3 )
text = "Gameover"
align = 1
uppercase = true

[node name="Duration" type="Label" parent="."]
visible = false
margin_left = 210.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 24.0
text = "0"

[node name="PlayerMoney" type="Label" parent="."]
margin_left = 30.0
margin_top = 80.0
margin_right = 70.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="Player_Coin" type="AnimatedSprite" parent="PlayerMoney"]
position = Vector2( 97.999, 20 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="PlayerName" type="Label" parent="PlayerMoney"]
margin_left = -0.390015
margin_top = -41.1369
margin_right = 116.61
margin_bottom = -5.13695
custom_fonts/font = SubResource( 8 )
text = "PLAYER"

[node name="DealerMoney" type="Label" parent="."]
margin_left = 350.0
margin_top = 80.0
margin_right = 390.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="DealerName" type="Label" parent="DealerMoney"]
margin_left = -70.5561
margin_top = -42.9876
margin_right = 49.4439
margin_bottom = -6.98756
custom_fonts/font = SubResource( 8 )
text = "DEALER"

[node name="Dealer_Coin" type="AnimatedSprite" parent="DealerMoney"]
position = Vector2( -40, 20 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 5 )
frame = 2
playing = true
flip_h = true

[node name="Winner" type="Label" parent="."]
modulate = Color( 0.972549, 0.435294, 0.0431373, 1 )
margin_left = 160.0
margin_top = 210.0
margin_right = 274.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 7 )
text = "YOU WIN"

[node name="bgmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="pressed" from="NewGame" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
